@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
class OmniTravel{
-invokeCommand(command: String[], line: String, list: TravelActivityList): void
}

class Parser{
+updateCommand(line: String, list: TravelActivityList): void
}
class CheckParameters{
+updateExceptions(command: String[], line: String): void
+containsWords(input String): void
}
class TravelActivityList{
+updateTravelActivity(travelActivityNumber: int, date: LocalDate, duration: String, tag: String): void
}
class TravelActivity{
+setDate(date: LocalDate): void
+setDuration(duration: String): void
+setTag(tag: String): void
}
class Ui{
+printLine(): void
}
OmniTravel ..> Ui
OmniTravel ..> Parser
Parser --> TravelActivityList
TravelActivityList --> "*"TravelActivity
TravelActivityList ..> CheckParameters

@enduml